--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,49 @@
-# Compiled class file
-*.class
-
-# Log file
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# BlueJ files
-*.ctxt
+# Dependencies
+node_modules
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Build outputs
+dist
+dist-ssr
+build
+*.local
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Local Netlify folder
+.netlify
+
+# Cache
+.cache
+*.tsbuildinfo
+
+# Testing
+coverage
